--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -112,6 +112,7 @@ set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
 set_real_ip_from 118.194.234.240;
@@ -281,7 +282,6 @@ set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.132.53.6;
-set_real_ip_from 185.14.31.113;
 set_real_ip_from 185.150.28.13;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
@@ -376,6 +376,7 @@ set_real_ip_from 185.241.208.24;
 set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
 set_real_ip_from 185.241.208.81;
+set_real_ip_from 185.241.208.82;
 set_real_ip_from 185.241.208.92;
 set_real_ip_from 185.244.192.175;
 set_real_ip_from 185.244.192.184;
@@ -661,6 +662,7 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:545c::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1135,8 +1137,6 @@ set_real_ip_from 2a00:c70:1:185:246:84:179:1;
 set_real_ip_from 2a00:fbe4:1ab:ffff::133;
 set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:4f9:2b:75d::124:148;
-set_real_ip_from 2a01:5e0:36:c311::1;
-set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1418,6 +1418,7 @@ set_real_ip_from 2a12:a800:2:1:185:241:208:204;
 set_real_ip_from 2a12:a800:2:1:185:241:208:206;
 set_real_ip_from 2a12:a800:2:1:185:241:208:71;
 set_real_ip_from 2a12:a800:2:1:185:241:208:81;
+set_real_ip_from 2a12:a800:2:1:185:241:208:82;
 set_real_ip_from 2a12:a800:2:1:185:241:208:92;
 set_real_ip_from 2a12:a800:2:1:45:138:16:107;
 set_real_ip_from 2a12:a800:2:1:45:138:16:113;
@@ -1433,6 +1434,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:69;
 set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
+set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
 set_real_ip_from 2a12:a800:2:1:45:141:215:167;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
@@ -1447,6 +1449,8 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:61;
 set_real_ip_from 2a12:a800:2:1:45:141:215:62;
 set_real_ip_from 2a12:a800:2:1:45:141:215:63;
 set_real_ip_from 2a12:a800:2:1:45:141:215:80;
+set_real_ip_from 2a12:a800:2:1:45:141:215:88;
+set_real_ip_from 2a12:a800:2:1:45:141:215:90;
 set_real_ip_from 2a12:a800:2:1:45:141:215:95;
 set_real_ip_from 2a12:a800:2:1:45:141:215:97;
 set_real_ip_from 2a12:a800:2:1:45:80:158:167;
@@ -1519,6 +1523,7 @@ set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.69;
 set_real_ip_from 45.138.16.76;
 set_real_ip_from 45.141.215.110;
+set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
 set_real_ip_from 45.141.215.133;
 set_real_ip_from 45.141.215.167;
@@ -1534,6 +1539,8 @@ set_real_ip_from 45.141.215.61;
 set_real_ip_from 45.141.215.62;
 set_real_ip_from 45.141.215.63;
 set_real_ip_from 45.141.215.80;
+set_real_ip_from 45.141.215.88;
+set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.145.93.133;
@@ -1686,9 +1693,6 @@ set_real_ip_from 72.235.129.116;
 set_real_ip_from 72.5.43.62;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.246.98.159;
-set_real_ip_from 77.48.28.204;
-set_real_ip_from 77.48.28.237;
-set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.133.57.64;
@@ -1829,10 +1833,6 @@ set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.231.118;
 set_real_ip_from 93.95.231.14;
 set_real_ip_from 93.95.231.88;
-set_real_ip_from 93.99.104.128;
-set_real_ip_from 93.99.104.18;
-set_real_ip_from 93.99.104.194;
-set_real_ip_from 93.99.104.40;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
