--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -20,6 +20,7 @@ set_real_ip_from 103.20.241.102;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
+set_real_ip_from 103.28.52.93;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
@@ -112,7 +113,6 @@ set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.172.205.8;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
 set_real_ip_from 118.194.234.240;
@@ -198,7 +198,6 @@ set_real_ip_from 172.105.20.12;
 set_real_ip_from 172.232.209.254;
 set_real_ip_from 172.233.82.41;
 set_real_ip_from 172.234.228.174;
-set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.0.3.111;
@@ -286,6 +285,7 @@ set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
 set_real_ip_from 185.165.171.84;
+set_real_ip_from 185.168.194.63;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.177.151.34;
 set_real_ip_from 185.183.157.214;
@@ -560,6 +560,7 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
+set_real_ip_from 2001:1b40:5700:983c::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
 set_real_ip_from 2001:1b60:3:221:3132:102:0:1;
 set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
@@ -661,9 +662,9 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:545c::b;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
+set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
 set_real_ip_from 202.182.99.129;
 set_real_ip_from 204.137.14.104;
 set_real_ip_from 204.137.14.105;
@@ -1118,7 +1119,6 @@ set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
-set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
@@ -1615,6 +1615,7 @@ set_real_ip_from 45.95.169.109;
 set_real_ip_from 45.95.169.110;
 set_real_ip_from 45.95.169.252;
 set_real_ip_from 46.165.243.36;
+set_real_ip_from 46.17.104.189;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1710,6 +1711,7 @@ set_real_ip_from 80.94.92.135;
 set_real_ip_from 80.94.92.92;
 set_real_ip_from 80.94.92.99;
 set_real_ip_from 81.16.33.42;
+set_real_ip_from 81.168.83.98;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 81.181.104.22;
 set_real_ip_from 82.118.248.205;
@@ -1719,7 +1721,6 @@ set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
-set_real_ip_from 82.29.128.140;
 set_real_ip_from 82.29.153.76;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.228.94.69;
@@ -1739,7 +1740,6 @@ set_real_ip_from 87.118.116.12;
 set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
-set_real_ip_from 87.120.254.132;
 set_real_ip_from 87.120.93.182;
 set_real_ip_from 88.151.194.24;
 set_real_ip_from 88.80.20.86;
