--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1188,6 +1188,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1616,7 +1617,6 @@ allow 46.38.243.210;
 allow 46.8.43.110;
 allow 50.7.40.39;
 allow 5.101.82.22;
-allow 5.101.82.67;
 allow 5.101.84.151;
 allow 5.104.84.183;
 allow 5.104.86.6;
@@ -1630,6 +1630,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1776,7 +1777,6 @@ allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
-allow 93.95.228.205;
 allow 93.95.231.118;
 allow 93.95.231.14;
 allow 93.95.231.88;
