--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1188,6 +1188,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1616,7 +1617,6 @@ deny 46.38.243.210;
 deny 46.8.43.110;
 deny 50.7.40.39;
 deny 5.101.82.22;
-deny 5.101.82.67;
 deny 5.101.84.151;
 deny 5.104.84.183;
 deny 5.104.86.6;
@@ -1630,6 +1630,7 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1776,7 +1777,6 @@ deny 93.90.74.28;
 deny 93.90.74.29;
 deny 93.95.227.37;
 deny 93.95.228.125;
-deny 93.95.228.205;
 deny 93.95.231.118;
 deny 93.95.231.14;
 deny 93.95.231.88;
