--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1188,6 +1188,7 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -1616,7 +1617,6 @@ set_real_ip_from 46.38.243.210;
 set_real_ip_from 46.8.43.110;
 set_real_ip_from 50.7.40.39;
 set_real_ip_from 5.101.82.22;
-set_real_ip_from 5.101.82.67;
 set_real_ip_from 5.101.84.151;
 set_real_ip_from 5.104.84.183;
 set_real_ip_from 5.104.86.6;
@@ -1630,6 +1630,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1776,7 +1777,6 @@ set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
-set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.231.118;
 set_real_ip_from 93.95.231.14;
 set_real_ip_from 93.95.231.88;
