--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -431,6 +431,7 @@ allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
+allow 185.230.162.134;
 allow 185.231.102.51;
 allow 185.235.146.29;
 allow 185.241.208.115;
@@ -575,7 +576,6 @@ allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.15.36.117;
-allow 194.163.157.49;
 allow 194.26.192.77;
 allow 194.53.137.156;
 allow 194.87.55.98;
@@ -1303,6 +1303,7 @@ allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
+allow 2a09:6301:0:4f3:c39b:cae7:2893:78d3;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:f4c0:16c:10::1;
@@ -1667,6 +1668,7 @@ allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.153.34.246;
 allow 45.154.98.33;
+allow 45.38.20.81;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1741,7 +1743,6 @@ allow 46.250.243.29;
 allow 46.30.188.218;
 allow 46.38.243.210;
 allow 46.8.43.110;
-allow 47.153.190.249;
 allow 5.101.82.22;
 allow 5.104.84.183;
 allow 5.104.86.6;
