--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -468,6 +468,7 @@ allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
+allow 2a09:6301:0:4f3:c39b:cae7:2893:78d3;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:f4c0:16c:10::1;
